# titan

./: README.md
KCA_JSV_RCB_TITANBUENO/: README.md
KCA_JSV_RCB_TITANBUENO/titanbueno/: ABRIR_EN_GOOGLE_CHROME.bat  LINK_PAGINA_WEB.txt  README.md  index.html  pyproject.toml  requirements.txt
KCA_JSV_RCB_TITANBUENO/titanbueno/outputs/: anexo_calculos.docx  anexo_calculos.html  anexo_calculos.md  contexto_mcs.csv  escenario_a_capacidad.csv  escenario_a_cobertura.csv  escenario_b_capacidad.csv  escenario_b_cell_splitting.csv  escenario_b_cobertura.csv  guion_defensa.docx  guion_defensa.html  guion_defensa.md  informe_resultados.docx  informe_resultados.html  informe_resultados.md  objetivos_escenario.csv  sistema_parametros.csv  supuestos.csv  validacion_rubrica.csv
KCA_JSV_RCB_TITANBUENO/titanbueno/src/titan/: __init__.py  cellular_planning.py  config.py  instrumentation.py  main.py  plots.py  propagation.py  radio_access.py  report.py  scenario_a.py  scenario_b.py  site_builder.py  streamlit_app.py  ui_charts.py
